add retrievecompanyinfo in companycontroller and CompanyRetrieveDto in company model #30
